--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "expo": "~52.0.23",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.5"
+    "react-native": "0.76.5",
+    "react-native-edge-to-edge": "^1.1.3",
+    "react-native-nitro-modules": "^0.18.2",
+    "react-native-unistyles": "^3.0.0-beta.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "^5.3.3"
   },
   "private": true,
