--- a/package.json
+++ b/package.json
@@ -6,20 +6,29 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "pod-install": "cd ios && pod install"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "@tabler/icons-react-native": "^3.26.0",
     "expo": "~52.0.23",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-edge-to-edge": "^1.1.3",
-    "react-native-nitro-modules": "^0.18.2",
-    "react-native-unistyles": "^3.0.0-beta.4"
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
+    "react-native-unistyles": "^2.20.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/react-native-get-random-values": "^1",
     "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "^5.3.3"
   },
