--- a/package.json
+++ b/package.json
@@ -10,26 +10,38 @@
     "pod-install": "cd ios && pod install"
   },
   "dependencies": {
+    "@react-native-menu/menu": "^1.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@tabler/icons-react-native": "^3.26.0",
+    "dayjs": "^1.11.13",
+    "drizzle-orm": "^0.38.3",
     "expo": "~52.0.23",
+    "expo-build-properties": "~0.13.1",
+    "expo-drizzle-studio-plugin": "^0.1.1",
+    "expo-sqlite": "~15.0.4",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-native-edge-to-edge": "^1.1.3",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-ios-context-menu": "^2.5.3",
+    "react-native-ios-utilities": "^4.5.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-unistyles": "^2.20.0",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "zeego": "^2.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
     "@types/react-native-get-random-values": "^1",
+    "babel-plugin-inline-import": "^3.0.0",
     "babel-plugin-module-resolver": "^5.0.2",
+    "drizzle-kit": "^0.30.1",
     "typescript": "^5.3.3"
   },
   "private": true,
